test/spec_vectors/simd_bit_shift/fail/module_9.wat
(module (func (result v128) (i32x4.shr_s (i32.const 0) (i32.const 0))))